--- a/app/src/main/res/layout/activity_add_update.xml
+++ b/app/src/main/res/layout/activity_add_update.xml
@@ -51,6 +51,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/submit"
-            android:onClick="@{() -> viewmodel.insertProduct()}"/>
+            android:onClick="@{() -> viewmodel.saveProduct()}"/>
     </LinearLayout>
 </layout>
